<resources>
    <string name="app_name">app7</string>
    <string name="saved_number">Saved number:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal">=</string>
    <string name="ac">AC</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="point">.</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="divide">/</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="m1">M-</string>
    <string name="m2">M+</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="c">C</string>
    <string name="pro">%</string>
    <string name="root">√</string>
    <string name="ms">MS</string>
</resources>
