<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/plus"
            android:onClick="Plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plus"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/equal"
            app:layout_constraintTop_toBottomOf="@+id/minus"
            android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toTopOf="@+id/view2"/>
    <Button
            android:text="@string/minus"
            android:onClick="Minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minus"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toTopOf="@+id/plus"
            app:layout_constraintStart_toEndOf="@+id/_3"
            app:layout_constraintTop_toBottomOf="@+id/multiply"/>
    <Button
            android:text="@string/equal"
            android:onClick="Equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equal"
            tools:ignore="MissingConstraints,UnknownId"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="412dp"
            app:layout_constraintStart_toEndOf="@+id/point"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="47dp"
            app:layout_constraintBottom_toTopOf="@+id/view2"/>
    <Button
            android:text="@string/ac"
            android:onClick="AC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ac"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mc"
            app:layout_constraintEnd_toStartOf="@+id/c"
            app:layout_constraintBottom_toTopOf="@+id/_7"/>
    <Button
            android:text="@string/_5"
            android:onClick="Five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_5"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/_8"
            app:layout_constraintStart_toEndOf="@+id/_4"
            app:layout_constraintEnd_toStartOf="@+id/_6"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/_2"/>
    <Button
            android:text="@string/_2"
            android:onClick="Two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_2"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/_5"
            app:layout_constraintStart_toEndOf="@+id/_1"
            app:layout_constraintEnd_toStartOf="@+id/_3"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/point"/>
    <Button
            android:text="@string/point"
            android:onClick="Point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/point"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/_2"
            app:layout_constraintStart_toEndOf="@+id/_0"
            app:layout_constraintEnd_toStartOf="@+id/equal"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/_6"
            android:onClick="Six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_6"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/_9"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/_5"
            app:layout_constraintBottom_toTopOf="@+id/_3"/>
    <Button
            android:text="@string/_3"
            android:onClick="Three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_3"
            tools:ignore="MissingConstraints"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/_2"
            app:layout_constraintTop_toBottomOf="@+id/_6"
            app:layout_constraintBottom_toTopOf="@+id/equal"/>
    <Button
            android:text="@string/_8"
            android:onClick="Eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_8"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/_7"
            app:layout_constraintTop_toBottomOf="@+id/c"
            app:layout_constraintEnd_toStartOf="@+id/_9"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/_5"/>
    <Button
            android:text="@string/_9"
            android:onClick="Nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_9"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/pro"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/_8"
            app:layout_constraintBottom_toTopOf="@+id/_6"/>
    <Button
            android:text="@string/x"
            android:onClick="Multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/multiply"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/_6"
            app:layout_constraintTop_toBottomOf="@+id/divide"
            app:layout_constraintBottom_toTopOf="@+id/minus"/>
    <Button
            android:text="@string/divide"
            android:onClick="Divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/divide"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/_9"
            app:layout_constraintTop_toBottomOf="@+id/root"
            app:layout_constraintBottom_toTopOf="@+id/multiply"/>
    <TextView
            android:layout_width="411dp"
            android:layout_height="126dp"
            android:id="@+id/view"
            android:textSize="50sp"
            tools:ignore="MissingConstraints,RtlSymmetry"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/mc"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold|italic"/>
    <Button
            android:text="@string/mc"
            android:onClick="MC"
            android:layout_width="71dp"
            android:layout_height="51dp"
            android:id="@+id/mc"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/m1"
            app:layout_constraintEnd_toStartOf="@+id/mr"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
    <Button
            android:text="@string/mr"
            android:onClick="MR"
            android:layout_width="72dp"
            android:layout_height="51dp"
            android:id="@+id/mr"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/mc"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
    <Button
            android:text="@string/m1"
            android:onClick="M1"
            android:layout_width="72dp"
            android:layout_height="51dp"
            android:id="@+id/m1"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/ms"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/mc"/>
    <Button
            android:text="@string/ms"
            android:onClick="MS"
            android:layout_width="72dp"
            android:layout_height="51dp"
            android:id="@+id/ms"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/ac"/>
    <Button
            android:text="@string/m2"
            android:onClick="M2"
            android:layout_width="72dp"
            android:layout_height="51dp"
            android:id="@+id/m2"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/mr"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
    <Button
            android:text="@string/_4"
            android:onClick="Four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_4"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/_7"
            app:layout_constraintEnd_toStartOf="@+id/_5"
            app:layout_constraintBottom_toTopOf="@+id/_1"/>
    <Button
            android:text="@string/_1"
            android:onClick="One"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_1"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/_4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/_2"
            app:layout_constraintBottom_toTopOf="@+id/_0"/>
    <Button
            android:text="@string/_0"
            android:onClick="Zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_0"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/point"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/saved"/>
    <Button
            android:text="@string/_7"
            android:onClick="Seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/_7"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/ac"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/_8"
            app:layout_constraintBottom_toTopOf="@+id/_4"/>
    <Button
            android:text="@string/c"
            android:onClick="C"
            android:layout_width="wrap_content"
            android:layout_height="48dp" android:id="@+id/c"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mc"
            app:layout_constraintStart_toEndOf="@+id/ac"
            app:layout_constraintEnd_toStartOf="@+id/pro"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/_8"/>
    <Button
            android:text="@string/pro"
            android:onClick="Pro"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/pro"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/m1"
            app:layout_constraintEnd_toStartOf="@+id/root"
            app:layout_constraintBottom_toTopOf="@+id/_9"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/root"
            android:onClick="Root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/root"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toEndOf="@+id/pro"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/m2"
            app:layout_constraintBottom_toTopOf="@+id/divide"/>
    <TextView
            android:layout_width="360dp"
            android:layout_height="75dp"
            android:id="@+id/view2"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            app:layout_constraintTop_toBottomOf="@+id/saved"
            android:layout_marginBottom="19dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/saved_number"
            android:fontFamily="sans-serif-condensed"
            android:textSize="15sp"
            android:textStyle="bold|italic"
            android:layout_width="98dp"
            android:layout_height="31dp"
            android:id="@+id/saved"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="290dp"
            android:layout_marginRight="290dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/point"
            app:layout_constraintBottom_toTopOf="@+id/view2"/>
</androidx.constraintlayout.widget.ConstraintLayout>